--- a/spotifyClone.css
+++ b/spotifyClone.css
@@ -4,6 +4,7 @@
   color: white;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 .main{
  display: flex; 
@@ -11,18 +12,63 @@ height: 100vh;
 }
 /* For spotplay sidebar content  */
 .sidebar-content{
-background-color: aqua;
-width: 18%;
+/* background-color:#121212; */
+background-color: antiquewhite;
+width: 340px;
+ border-radius: 1rem; /*1rem = 16px */
 }
 /* For spotplay main content  */
 .main-content{
-background-color: blue;
-flex: 1;
+background-color:#121212;
+  flex: 1;
+  border-radius: 1rem; 
+  overflow: auto;
 }
 /* For spotplay media section content  */
 .mediaplayer-sesction{
-background-color: brown;
-position: fixed;
-bottom: 0;
+  background-color:#000000;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 72px;
+  }
+/* spotplay sidebar */
 
+/* Home-section */
+.sidebar-content .home-section{
+display: flex;
+background-color: #121212;
+/* background-color: antiquewhite; */
+color: white;
+border-radius: 1rem;
+flex-direction: column;
+justify-content: center;
+/* width: 100%; */
+height: 100px;
+padding: 0.5rem 0.75rem;
+/* padding: 8px 12px 8px 12px; */
+}
+.home{
+background-color: #121212;
+
+}
+
+  
+/* .home-section .home-icon {
+  background-color: aqua;
+
+}
+.home-section .search-icon {
+  background-color:blue;
+
+} */
+.sidebar-content .home-section  a,i{
+text-decoration: none;
+background-color: #121212;
+
+}
+/* library-section */
+
+.sidebar-content .library-section{
+  background-color: rgb(0, 140, 255);
 }
