--- a/spotifyClone.css
+++ b/spotifyClone.css
@@ -10,33 +10,19 @@
 .main {
   display: flex;
   height: 100vh;
+  /* for adding breathing space */
+  padding: 0.5rem;
 }
 
 /* For spotplay sidebar content  */
 .sidebar-content {
-  /* background-color:#121212; */
   background-color: antiquewhite;
   width: 340px;
   border-radius: 1rem;
-  /*1rem = 16px */
+  /* background-color:#121212; */
+  /*TODO: 1rem = 16px */
 }
 
-/* For spotplay main content  */
-.main-content {
-  background-color: #121212;
-  flex: 1;
-  border-radius: 1rem;
-  overflow: auto;
-}
-
-/* For spotplay media section content  */
-.mediaplayer-sesction {
-  background-color: #000000;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 72px;
-}
 
 /* spotplay sidebar */
 
@@ -87,3 +73,76 @@ i {
 }
 
 /* library-section */
+.library-section{
+  border-radius: 1rem;
+  height: 100vh;
+  margin-top: 0.5rem;
+  padding: 0.5rem 0.75rem;
+}
+.Your-library{
+display: flex;
+justify-content: space-between;
+
+}
+.Your-library img{
+  height: 1.25rem;
+  width: 1.25rem;
+}
+.Your-library a{
+  text-decoration: none;
+}
+.Your-library .icons{
+  font-size: 1rem;
+  margin-right: 1rem;
+}
+.side-icons i{
+  font-size: 1rem;
+  margin-right: 1rem;
+  opacity: 0.7;
+  margin-top: 0.8rem;
+}
+.side-icons i:hover{
+  opacity: 1;
+}
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* For spotplay main content  */
+  .main-content {
+    background-color: #121212;
+    flex: 1;
+    border-radius: 1rem;
+    overflow: auto;
+  }
+  
+  /* For spotplay media section content  */
+  .mediaplayer-sesction {
+    background-color: #000000;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 72px;
+  }
