--- a/spotifyClone.css
+++ b/spotifyClone.css
@@ -1,4 +1,4 @@
-* {
+body {
   font-family: "Montserrat", sans-serif;
   background-color: black;
   color: white;
@@ -16,10 +16,9 @@
 
 /* For spotplay sidebar content  */
 .sidebar-content {
-  background-color: antiquewhite;
   width: 340px;
   border-radius: 1rem;
-  /* background-color:#121212; */
+  background-color: #000000;
   /*TODO: 1rem = 16px */
 }
 
@@ -30,18 +29,15 @@
 .home-section {
   display: flex;
   background-color: #121212;
-  /* background-color: antiquewhite; */
   border-radius: 1rem;
   flex-direction: column;
   justify-content: center;
-  /* width: 100%; */
   height: 100px;
   padding: 0.5rem 0.75rem;
   /* padding: 8px 12px 8px 12px; */
 }
 
 .home {
-  background-color: #121212;
   line-height: 2.5rem;
   opacity: 0.5;
   padding: 0.5rem;
@@ -68,12 +64,13 @@
 .sidebar-content .home-section a,
 i {
   text-decoration: none;
-  background-color: #121212;
+  color:white;
   
 }
 
 /* library-section */
 .library-section{
+  background-color: #121212;
   border-radius: 1rem;
   height: 100vh;
   margin-top: 0.5rem;
@@ -90,6 +87,7 @@ justify-content: space-between;
 }
 .Your-library a{
   text-decoration: none;
+  color: white;
 }
 .Your-library .icons{
   font-size: 1rem;
@@ -139,7 +137,7 @@ justify-content: space-between;
   }
   
   /* For spotplay media section content  */
-  .mediaplayer-sesction {
+  .mediaplayer-section {
     background-color: #000000;
     position: fixed;
     bottom: 0;
