--- a/spotifyClone.css
+++ b/spotifyClone.css
@@ -10,16 +10,16 @@ body {
 .main {
   display: flex;
   height: 100vh;
-  /* for adding breathing space */
-  padding: 0.5rem;
+  padding: 0.5rem;                            /* for adding breathing space */
 }
 
 /* For spotplay sidebar content  */
 .sidebar-content {
   width: 340px;
   border-radius: 1rem;
-  background-color: #000000;
-  /*TODO: 1rem = 16px */
+  background-color: #000000;                  /*TODO: 1rem = 16px */
+  margin-right: 0.5rem;
+
 }
 
 
@@ -44,7 +44,6 @@ body {
 }
 
 .home:hover {
-  /* background-color: #121212; */
   opacity: 1;
 
 }
@@ -84,10 +83,12 @@ justify-content: space-between;
 .Your-library img{
   height: 1.25rem;
   width: 1.25rem;
+  margin-right: 11px;
 }
 .Your-library a{
   text-decoration: none;
   color: white;
+
 }
 .Your-library .icons{
   font-size: 1rem;
@@ -102,10 +103,36 @@ justify-content: space-between;
 .side-icons i:hover{
   opacity: 1;
 }
-  
+  /* Create playlist section */
 
+  .library-playlist{
+padding: 0.5rem 2.8rem;
+width: 220px;
+/* height: 100px; */
+height: 8rem;
+background-color: #232323;  
+border-radius: 0.75rem;   
+margin: 0.45rem 0 1.35rem 0;
+  }
+.heading{
+  font-size: 1rem;
+  font-weight: 500;
+}
+.disc{
+  font-size: 17px;
+  opacity: 0.9;
+}
+.library-playlist button{
+  background-color: white;
+  font-weight: 700;
+  font-size: 12px;
+  padding: 0.25rem 1rem;
+  font-weight: 700;
+  border: none;
+  border-radius:100px;
+height: 2rem;
 
-
+}
 
 
 
@@ -130,7 +157,8 @@ justify-content: space-between;
 
 /* For spotplay main content  */
   .main-content {
-    background-color: #121212;
+    /* background-color: #121212; */
+    background-color: green;
     flex: 1;
     border-radius: 1rem;
     overflow: auto;
@@ -142,5 +170,5 @@ justify-content: space-between;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 72px;
+    height: 25px;
   }
