--- a/spotifyClone.css
+++ b/spotifyClone.css
@@ -10,14 +10,16 @@ body {
 .main {
   display: flex;
   height: 100vh;
-  padding: 0.5rem;                            /* for adding breathing space */
+  padding: 0.5rem;
+  /* for adding breathing space */
 }
 
 /* For spotplay sidebar content  */
 .sidebar-content {
   width: 340px;
   border-radius: 1rem;
-  background-color: #000000;                  /*TODO: 1rem = 16px */
+  background-color: #000000;
+  /*TODO: 1rem = 16px */
   margin-right: 0.5rem;
 
 }
@@ -63,131 +65,119 @@ body {
 .sidebar-content .home-section a,
 i {
   text-decoration: none;
-  color:white;
-  
+  color: white;
+
 }
 
 /* library-section */
-.library-section{
+.library-section {
   background-color: #121212;
   border-radius: 1rem;
   height: 100vh;
   margin-top: 0.5rem;
   padding: 0.5rem 0.75rem;
 }
-.Your-library{
-display: flex;
-justify-content: space-between;
+
+.Your-library {
+  display: flex;
+  justify-content: space-between;
 
 }
-.Your-library img{
+
+.Your-library img {
   height: 1.25rem;
   width: 1.25rem;
   margin-right: 11px;
 }
-.Your-library a{
+
+.Your-library a {
   text-decoration: none;
   color: white;
 
 }
-.Your-library .icons{
+
+.Your-library .icons {
   font-size: 1rem;
   margin-right: 1rem;
 }
-.side-icons i{
+
+.side-icons i {
   font-size: 1rem;
   margin-right: 1rem;
   opacity: 0.7;
   margin-top: 0.8rem;
 }
-.side-icons i:hover{
+
+.side-icons i:hover {
   opacity: 1;
 }
-  /* Create playlist section */
 
-  .library-playlist {
-padding: 0.5rem 2.8rem;
-width: 220px;
-/* height: 100px; */
-height: 8rem;
-background-color: #232323;  
-border-radius: 0.75rem;   
-margin: 0.45rem 0 1.35rem 0;
-  }
-  .library-podcast{
-    padding: 0.5rem 2.8rem;
-width: 220px;
-height: 10.4rem;
-background-color: #232323;  
-border-radius: 0.75rem;   
-margin: 0.45rem 0 1.35rem 0;
-  }
-.heading{
+/* Create playlist section */
+
+.library-playlist {
+  padding: 0.5rem 2.8rem;
+  width: 220px;
+  /* height: 100px; */
+  height: 8rem;
+  background-color: #232323;
+  border-radius: 0.75rem;
+  margin: 0.45rem 0 1.35rem 0;
+}
+
+.library-podcast {
+  padding: 0.5rem 2.8rem;
+  width: 220px;
+  height: 10.4rem;
+  background-color: #232323;
+  border-radius: 0.75rem;
+  margin: 0.45rem 0 1.35rem 0;
+}
+
+.heading {
   font-size: 1rem;
   font-weight: 500;
 }
-.disc{
+
+.disc {
   font-size: 17px;
   opacity: 0.9;
 }
-.library-playlist button{
+
+.library-playlist button {
   background-color: white;
   font-weight: 700;
   font-size: 12px;
   padding: 0.25rem 1rem;
   font-weight: 700;
   border: none;
-  border-radius:100px;
-height: 2rem;
+  border-radius: 100px;
+  height: 2rem;
 
 }
-.library-podcast button{
+
+.library-podcast button {
   background-color: white;
   font-weight: 700;
   font-size: 12px;
   padding: 0.25rem 1rem;
   font-weight: 700;
   border: none;
-  border-radius:100px;
-height: 2rem;
+  border-radius: 100px;
+  height: 2rem;
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* For spotplay main content  */
-  .main-content {
-    /* background-color: #121212; */
-    background-color: green;
-    flex: 1;
-    border-radius: 1rem;
-    overflow: auto;
-  }
-  
-  /* For spotplay media section content  */
-  .mediaplayer-section {
-    background-color: #000000;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 25px;
-  }
+.main-content {
+  flex: 1;
+  border-radius: 1rem;
+  overflow: auto;
+}
+
+/* For spotplay media section content  */
+.mediaplayer-section {
+  background-color: #000000;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 25px;
+}
