Modify Content Section

--- a/spotifyClone.css
+++ b/spotifyClone.css
@@ -172,7 +172,7 @@ i {
   background-color: #121212;
   opacity: 0.9;
   border-radius: rem;
-  /* overflow: auto; */
+  overflow: auto;
 }
 
 /* Sticky-nav */
@@ -247,24 +247,27 @@ margin-right: 1rem;
   margin-left: 2rem;
   background-color: #121212;
   /* background-color: red; */
-
 }
 .card-item{
-  margin-bottom: 8px;
-  background-color: red;
-  width: 212px;
-  height: 302px;
+  background-color: #232323;
+padding: 1rem;
+border-radius: 0.5rem;
+width: 150px;
 }
 /* Card-image */
 
 /*Card head & Disc  */
 .card-head{
   font-size: 1rem;
-  pad: 0px 0px 4px;
+  padding: 0px 0px 4px;
   width: 120px;
   height: 30px;
+  font-weight: 600;
 }
-
+.card-disc{
+  font-size: 0.85rem;
+  opacity: 0.8;
+}
 
 
 
