--- a/spotifyClone.css
+++ b/spotifyClone.css
@@ -293,18 +293,73 @@ flex-wrap: wrap;
 
 /* For spotplay media section content  */
 .media-player-main {
-  /* background-color: #000000; */
-  background-color: red;
+  background-color: #000000;
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 125px;
+  height: 5.6rem;
+  display: flex;
 }
 
+/* img & songName & add btn*/
+.p1{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  width: 25%;
+  min-width: 180px;
+  margin-top: 0.9rem;
+  
+}  
 
+.p1 img{
+isolation: isolate;
+position: relative;
+border-radius: 8px;
+}
+ .p1 a{
+  text-decoration: none;
+  color: white;
+  
+ }
+ .p1 a:hover{
+  text-decoration: underline;
 
+ }
+.author a{
+opacity: 0.7;
+font-size: 11px;
+}
+.song-name a{
+  font-size: 13px;
+  font-weight: 600;
+}
+.song-disc{
+  margin-left: 1rem;
+}
+.add-btn i{
+  margin-left: 2rem;
+  margin-bottom: 0.6rem;
+opacity: 0.7;
+cursor: pointer;
+}
+.add-btn i:hover{
+opacity: 1;
+}
 
+/* Media-player-bar */
+.p2{
+  
+  width: 50%;
 
+}  
+.media-player-btns{
+  background-color: red;
+}
 
-
-
+/* volume & resize btn etc */
+.p3{
+  width: 25%;
+  background-color: aqua;
+}
